<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clipToPadding="false"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/layout_title_left_center"></include>

    <include layout="@layout/layout_line_1px_divider" />

    <com.android.livevideo.view.PullScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/f5"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/f5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/msg_detail_title_tv"
                style="@style/px28_212121"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/line_height"
                android:background="@drawable/shape_line_divider_bottom"
                android:lineSpacingExtra="@dimen/dm010"
                android:paddingBottom="@dimen/dm015"
                android:paddingLeft="@dimen/dm030"
                android:paddingRight="@dimen/dm030"
                android:paddingTop="@dimen/dm015" />

            <TextView
                android:id="@+id/msg_detail_content_tv"
                style="@style/px26_666"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:lineSpacingExtra="@dimen/dm010"
                android:padding="@dimen/dm030" />

            <TextView
                android:id="@+id/msg_detail_publish_tv"
                style="@style/px26_666"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dm020"
                android:background="@color/white"
                android:gravity="right"
                android:lineSpacingExtra="@dimen/dm013"
                android:paddingBottom="@dimen/dm030"
                android:paddingRight="@dimen/dm030"
                android:text="" />
        </LinearLayout>

    </com.android.livevideo.view.PullScrollView>

    <RelativeLayout
        android:id="@+id/audit_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_title_height"
        android:background="@drawable/shape_line_divider_dark_top"
        android:paddingTop="@dimen/dm001"
        android:visibility="gone">

        <View
            android:id="@+id/line"
            android:layout_width="@dimen/dm002"
            android:layout_height="@dimen/dm030"
            android:layout_centerInParent="true"
            android:background="@color/divider_color_dark" />

        <Button
            android:id="@+id/audit_bt_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@id/line"
            android:background="@null"
            android:gravity="center"
            android:text="@string/agress"
            android:textColor="@color/mainColor"
            android:textSize="@dimen/dm028" />

        <Button
            android:id="@+id/audit_bt_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/line"
            android:background="@null"
            android:gravity="center"
            android:text="@string/reject"
            android:textColor="@color/mainColor"
            android:textSize="@dimen/dm028" />

        <Button
            android:id="@+id/audit_bt_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/recall"
            android:textColor="@color/mainColor"
            android:textSize="@dimen/dm028"
            android:visibility="gone" />
    </RelativeLayout>
</LinearLayout>